--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation group: 'org.litepal.android', name: 'core', version: '2.0.0'
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.1.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.9.0'
 }
