--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,37 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        flavorDimensions "versionCode"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+//    productFlavors {
+//        qihoo {
+//            applicationId "com.example.coolweather.android.qihoo"
+//        }
+//        baidu {
+//            applicationId "com.example.coolweather.android.baidu"
+//        }
+//    }
+
+    signingConfigs{
+        config{
+            storeFile file(KEY_PATH)
+            storePassword KEY_PASS
+            keyAlias ALIAS_NAME
+            keyPassword ALIAS_PASS
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
+
+
+//    allprojects { gradle.projectsEvaluated { tasks.withType(JavaCompile) { options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" } }}
+
 }
 
 dependencies {
