--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,7 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+KEY_PATH=/Users/sunpeng/Desktop/android/zhugua.jks
+KEY_PASS=666666
+ALIAS_NAME=zhuguadev
+ALIAS_PASS=1234567
